--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -18,13 +18,12 @@
     <idea-version since-build="145.0"/>
 
     <extensions defaultExtensionNs="com.intellij">
-        <!-- Add your extensions here -->
     </extensions>
 
     <actions>
         <action id="DepsChecker.CheckVersionAction" class="com.touwolf.idea.plugin.depschecker.CheckVersionAction"
-                text="Check _Version" description="Checks dependencies versions with repository last version.">
-            <add-to-group group-id="AnalyzeMenu" anchor="last"/>
+                text="Check Dependencies _Version..." description="Checks dependencies versions with repository last version.">
+            <add-to-group group-id="AnalyzeActions" anchor="last"/>
         </action>
     </actions>
 </idea-plugin>
