--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
-**/out/**
-*.class
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/gradle.xml
+/.idea/libraries
+/.idea/dictionaries
+.DS_Store
+/build
