--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,11 @@ language: java
 jdk:
   - oraclejdk8
 
-./gradlew check buildPlugin
+before_install:
+  - chmod +x gradlew
+
+script:
+  - ./gradlew clean buildPlugin
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
