--- a/build.gradle
+++ b/build.gradle
@@ -22,5 +22,5 @@ repositories {
 
 dependencies {
     compile group: 'org.apache.maven', name: 'maven-model', version: '3.3.9'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
 }
