--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,9 +1,9 @@
 <idea-plugin version="2">
-    <id>com.touwolf.plugin.idea.depschecker</id>
+    <id>touwolf.depschecker</id>
     <name>Java Dependencies Checker</name>
     <version>0.1.0</version>
-    <vendor email="michel@touwolf.com"
-            url="https://touwolf.com">Touwolf</vendor>
+    <vendor email="miche.atucha@gmail.com"
+            url="https://github.com/miche-atucha/deps-checker">Touwolf</vendor>
 
     <description><![CDATA[
         Checks <strong>Java</strong> projects dependencies for version upgrades.
