--- a/build.gradle
+++ b/build.gradle
@@ -29,4 +29,5 @@ repositories {
 dependencies {
     compile group: 'org.apache.maven', name: 'maven-model', version: '3.3.9'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
